Completed Decision Trees and Ensemble Learning

--- a/05_Support_Vector_Machines.ipynb
+++ b/05_Support_Vector_Machines.ipynb
@@ -2035,39 +2035,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " \n",
-    "## **Exercise**\n",
-    "1) What is a support vector?\n",
-    "\n",
-    "What is the fundamental idea behind support vector machines?\n",
-    "\n",
-    "Why is it important to scale the inputs when using SVMs?\n",
-    "\n",
-    "Can an SVM classifier output a confidence score when it classifies an instance? What about a probability?\n",
-    "\n",
-    "How can you choose between LinearSVC, SVC, and SGDClassifier?\n",
-    "\n",
-    "Say you’ve trained an SVM classifier with an RBF kernel, but it seems to underfit the training set. Should you increase or decrease γ (gamma)? What about C?\n",
-    "\n",
-    "What does it mean for a model to be ϵ-insensitive?\n",
-    "\n",
-    "What is the point of using the kernel trick?\n",
-    "\n",
-    "Train a LinearSVC on a linearly separable dataset. Then train an SVC and a SGDClassifier on the same dataset. See if you can get them to produce roughly the same model.\n",
-    "\n",
-    "Train an SVM classifier on the wine dataset, which you can load using sklearn.datasets.load_wine(). This dataset contains the chemical analyses of 178 wine samples produced by 3 \n",
-    "different cultivators: the goal is to train a classification model capable of predicting the cultivator based on the wine’s chemical analysis. Since SVM classifiers are binary \n",
-    "classifiers, you will need to use one-versus-all to classify all three classes. What accuracy can you reach?\n",
-    "\n",
-    "Train and fine-tune an SVM regressor on the California housing dataset. You can use the original dataset rather than the tweaked version we used in Chapter 2, which you can load \n",
-    "using sklearn.datasets.fetch_california_housing().The targets represent hundreds of thousands of dollars. Since there are over20,000 instances, SVMs can be slow, so for\n",
-    "hyperparameter tuning you should use far fewer instances (e.g., 2,000) to test many more hyperparameter combinations. What is your best model’s RMSE"
+    "For better understanding of the maths behind SVM : https://www.youtube.com/watch?v=_PwhiWxHK8o&ab_channel=MITOpenCourseWare"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    " \n",
+    "## **Exercise**\n",
+    "1) What is a support vector?\n",
+    "\n",
+    "    Support Vector are the vectors which define the margin on the either side of the decision boundary, if an instance falls inside this margin it is considered as margin violation\n",
+    "\n",
+    "2) What is the fundamental idea behind support vector machines?\n",
+    "\n",
+    "    The fundamental idea behind SVM is to find the widest margin seperating the two classes\n",
+    "\n",
+    "3) Why is it important to scale the inputs when using SVMs?\n",
+    "\n",
+    "    Because SVM are sensitive to feature scales as they rely on distance between points to find the margin\n",
+    "\n",
+    "4) Can an SVM classifier output a confidence score when it classifies an instance? What about a probability?\n",
+    "\n",
+    "    No, it can give the signed distance from the decision boundary, probability is not given but for SVC training it with hyperparameter probability true we can use the predict_proba method\n",
+    "\n",
+    "5) How can you choose between LinearSVC, SVC, and SGDClassifier?\n",
+    "\n",
+    "    LinearSVC are optimized for linear classification, SVC supports the kernel trick but doesn't scale well to large datasets but does scale well for large features, SGDClassifier when the dataset is too large for linearSVC and supports incremental learning\n",
+    "\n",
+    "6) Say you’ve trained an SVM classifier with an RBF kernel, but it seems to underfit the training set. Should you increase or decrease γ (gamma)? What about C?\n",
+    "\n",
+    "    Underfit means that the model is too simple to fit the dataset, C is the parameter which decides the soft-margin violations, smaller the C more violations are allowed in order to fit better it'll require us to increase the C, gamma is responsible for the width of the bell-shaped curve formed by decision boundary of the rbf kernel SVM, if it is high it'll lead to a narrower bell-shaped curve (i.e. fit's more snugly between the classes) so we should increase it\n",
+    "\n",
+    "7) What does it mean for a model to be ϵ-insensitive?\n",
+    "\n",
+    "    A Regression SVM model tries to fit as many instances within a small margin around its predictions. If you add instances within this margin, the model will not be affected at all: it is said to be ϵ-insensitive\n",
+    "\n",
+    "8) What is the point of using the kernel trick?\n",
+    "\n",
+    "    The kernel trick is mathematical technique that makes it possible to train a nonlinear SVM model. The resulting model is equivalent to mapping the inputs to another space using a nonlinear transformation, then training a linear SVM on the resulting high-dimensional inputs. The kernel trick gives the same result without having to transform the inputs at all\n",
+    "\n",
+    "9) Train a LinearSVC on a linearly separable dataset. Then train an SVC and a SGDClassifier on the same dataset. See if you can get them to produce roughly the same model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "10) Train an SVM classifier on the wine dataset, which you can load using sklearn.datasets.load_wine(). This dataset contains the chemical analyses of 178 wine samples produced by 3 different cultivators: the goal is to train a classification model capable of predicting the cultivator based on the wine’s chemical analysis. Since SVM classifiers are binary classifiers, you will need to use one-versus-all to classify all three classes. What accuracy can you reach?\n",
+    "\n",
+    "11) Train and fine-tune an SVM regressor on the California housing dataset. You can use the original dataset rather than the tweaked version we used in Chapter 2, which you can load using sklearn.datasets.fetch_california_housing().The targets represent hundreds of thousands of dollars. Since there are over20,000 instances, SVMs can be slow, so for\n",
+    "hyperparameter tuning you should use far fewer instances (e.g., 2,000) to test many more hyperparameter combinations. What is your best model’s RMSE"
+   ]
   }
  ],
  "metadata": {
